--- a/index-infoDR.html
+++ b/index-infoDR.html
@@ -86,13 +86,15 @@
                 <div class="schedule">
                     <div class="text">Lịch khám tại viện:</div>
                     <div class="schedule-box">
-                        <input type="date" id="date" >
+                        <div class="selected-date">
+                            <input type="date" id="date" >
+                        </div>
                         <div class="shift-opt">
-                            <button class="shift" onclick="activeShift()" value="1">08:00 - 09:00</button>
-                            <button class="shift" onclick="activeShift()" value="2">09:00 - 10:00</button>
-                            <button class="shift" onclick="activeShift()" value="3">10:00 - 11:00</button>
-                            <button class="shift" onclick="activeShift()" value="4">14:00 - 15:00</button>
-                            <button class="shift" onclick="activeShift()" value="5">15:00 - 16:00</button>
+                            <input class="shift" onclick="activeShift()" value="08:00 - 09:00" readonly>
+                            <input class="shift" onclick="activeShift()" value="09:00 - 10:00" readonly>
+                            <input class="shift" onclick="activeShift()" value="10:00 - 11:00" readonly>
+                            <input class="shift" onclick="activeShift()" value="14:00 - 15:00" readonly>
+                            <input class="shift" onclick="activeShift()" value="15:00 - 16:00" readonly>
                         </div>
                     </div>
                     <div class="container-service" id="serviceInfo" style="display: none;">
