--- a/index-infoDR.html
+++ b/index-infoDR.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./assets/ava.png" type="assets/x-icon" />
+    <link rel="icon" href="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/ava.png" type="assets/x-icon" />
     <title>PGS.TS Đỗ Thùy Dương</title>
     <!-- CSS Files -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
@@ -26,7 +26,7 @@
         </nav>
         <nav class="container">
             <a href="#" class="logo">
-                <img src="./assets/ava_v2.png" title="Booking Health Care Web"/>
+                <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/ava_v2.png" title="Booking Health Care Web"/>
             </a>
             <div class="links">
                 <ul>
@@ -55,18 +55,22 @@
                 </div>
                 <div class="dr-info">
                     <h2 class="dr-name">PGS.TS Đỗ Thùy Dương</h2>
-                    <div class="hospital">
-                        <p class="hospital-name"> <i class="uil uil-map-marker"></i> Bệnh viện Zương Zương</p>
-                        <p class="text">Số 1 Đại Cồ Việt, Hai Bà Trưng, Hà Nội</p>
+                    <div class="phong-kham">
+                        <div class="text"><i class="uil uil-user-location"></i> Phòng khám: </div>
+                        <p class="dc-phongkham">P.402 Tòa D9</p>
+                    </div>
+                    <div class="email-box">
+                        <div class="text"><i class="uil uil-envelope"></i> Email: </div>
+                        <p class="email">zuong123@gmail.com</p>
+                    </div>
+                    <div class="sdt-box">
+                        <div class="text"><i class="uil uil-phone-alt"></i> Số điện thoại: </div>
+                        <p class="sdt">0123456789</p>
                     </div>
                     <div class="chuyen-khoa">
                         <p class="khoa">Chuyên khoa Tai Mũi Họng</p>
                     </div>
                     <p class="cost">Giá khám : <span>500.000đ</span></p>
-                    <div class="opt">
-                        <a href="#booking" class="btn">Đặt lịch ngay <i class="uil uil-arrow-circle-right"></i></a>
-                        <a href="#info-dr" class="btn secondary-btn">Thông tin</a>
-                    </div>
                 </div>
             </div>
         </section>
