--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./assets/ava.png" type="assets/x-icon" />
+    <link rel="icon" href="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/ava.png" type="assets/x-icon" />
     <title>Health Care - online service</title>
     <!-- CSS Files -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
     <link rel="stylesheet" href="./css/style.css">
+    <style>
+        .showcase-banner {
+          background-image: url("https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/photo7.png");
+          background-repeat: no-repeat;
+          background-size: cover;
+        }
+      </style>
+    
 </head>
 
 <body>
@@ -49,6 +57,7 @@
 
     <main>
         <section class="showcase-area">
+            <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/photo7.png" class="banner-bg">
             <div class="container">
                 <div class="showcase-info">
                     <h2 class="sub-heading">Nền Tảng Y Tế</h2>
