--- a/index.html
+++ b/index.html
@@ -57,20 +57,21 @@
 
     <main>
         <section class="showcase-area">
-            <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/banner-01.png" class="banner-bg">
+            <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/bg-banner-01.png" class="banner-bg">
             <div class="container">
                 <div class="showcase-info">
                     <h2 class="sub-heading">Nền Tảng Y Tế</h2>
                     <h1 class="heading">CHĂM SÓC SỨC KHỎE TOÀN DIỆN</h1>
                 </div>
+                <div class="showcase-logo">
+                    
+                </div>
                 <div class="service">
-                    <a href="#" class="service-btn">
-
-                    </a>
-                    <a href="#" class="service-btn"></a>
+                    <a href="#" class="service-btn">Khám chuyên khoa</a>
                     <a href="#" class="service-btn">Hồ sơ sức khỏe</a>
                     <a href="#" class="service-btn">Hỏi đáp bác sĩ</a>
-                    <a href="#" class="service-btn"></a>
+                    <a href="#" class="service-btn">Dịch vụ khẩn cấp</a>
+                    <a href="#" class="service-btn">Sản phẩm y tế</a>
                 </div>
             </div>
         </section>
