--- a/index.html
+++ b/index.html
@@ -10,13 +10,6 @@
     <!-- CSS Files -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
     <link rel="stylesheet" href="./css/style.css">
-    <style>
-        .showcase-banner {
-          background-image: url("https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/photo7.png");
-          background-repeat: no-repeat;
-          background-size: cover;
-        }
-      </style>
     
 </head>
 
@@ -64,7 +57,7 @@
                     <h1 class="heading">CHĂM SÓC SỨC KHỎE TOÀN DIỆN</h1>
                 </div>
                 <div class="showcase-logo">
-                    
+                    <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/ava_text.png">
                 </div>
                 <div class="service">
                     <a href="#" class="service-btn">Khám chuyên khoa</a>
