--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <main>
         <section class="showcase-area">
-            <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/bg-banner-01.png" class="banner-bg">
+            <img src="./assets/bg-banner-01.png" alt="bg-banner">
             <div class="container">
                 <div class="showcase-info">
                     <h2 class="sub-heading">Nền Tảng Y Tế</h2>
