--- a/test.html
+++ b/test.html
@@ -9,17 +9,7 @@
     
   </head>
   <body>
-    <label for="date">Ngày:</label>
-<input type="date" id="date">
-<br>
-<label for="time">Giờ:</label>
-<select id="time">
-  <option value="" disabled selected>Chọn giờ</option>
-  <option value="09:00">09:00</option>
-  <option value="13:00">13:00</option>
-  <option value="18:00">18:00</option>
-</select>
-<br>
+<a href="#" onclick="show()">show</a>
 <div id="ticketInfo" style="display: none;">
   <h2>Thông tin vé</h2>
   <p><i class="uil uil-check-circle"></i></p>
