--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+    <!-- Header -->
+    
     <header>
         <nav class="info">
             <ul>
@@ -48,6 +50,8 @@
         </nav>
     </header>
 
+    <!-- Main -->
+
     <main>
         <section class="showcase-area">
             <img src="./assets/bg-banner-01.png" alt="bg-banner">
@@ -56,19 +60,46 @@
                     <h2 class="sub-heading">Nền Tảng Y Tế</h2>
                     <h1 class="heading">CHĂM SÓC SỨC KHỎE TOÀN DIỆN</h1>
                 </div>
-                <div class="showcase-logo">
-                    <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/ava_text.png">
-                </div>
+                <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/ava-text2.png" class="showcase-logo">
                 <div class="service">
-                    <a href="#" class="service-btn">Khám chuyên khoa</a>
-                    <a href="#" class="service-btn">Hồ sơ sức khỏe</a>
-                    <a href="#" class="service-btn">Hỏi đáp bác sĩ</a>
-                    <a href="#" class="service-btn">Dịch vụ khẩn cấp</a>
-                    <a href="#" class="service-btn">Sản phẩm y tế</a>
+                    <ul>
+                        <li><a href="#" class="service-btn">Khám chuyên khoa</a></li>
+                        <li><a href="#" class="service-btn">Hồ sơ sức khỏe</a></li>
+                        <li><a href="#" class="service-btn">Hỏi đáp bác sĩ</a></li>
+                        <li><a href="#" class="service-btn">Dịch vụ khẩn cấp</a></li>
+                        <li><a href="#" class="service-btn">Sản phẩm y tế</a></li>
+                    </ul>
                 </div>
             </div>
         </section>
+        <section class="bac-si-noi-bat"></section>
+            <div class="doctor-card"></div>
+            <div class="pagination"></div>
+        <section class="kham-chuyen-khoa"></section>
+        <section class="cam-nang"></section>
+        <section class="sp-y-te"></section>
     </main>
+
+    <!-- Footer -->
+
+    <footer>
+        <div class="container">
+            <a href="#" class="logo">
+                <img src="./assets/ava_v2.png" title="Booking Health Care Web"/>
+            </a>
+            <ul class="social-media">
+                <li>
+                    <a href="#" class="social-link"><i class="uil uil-facebook-f"></i></a>
+                </li>
+                <li>
+                    <a href="#" class="social-link"><i class="uil uil-twitter"></i></a>
+                </li>
+                <li>
+                    <a href="#" class="social-link"><i class="uil uil-instagram"></i></a>
+                </li>
+            </ul>
+        </div>
+    </footer>
 
     <!-- JavaScript Files -->
 
