--- a/index-CK.html
+++ b/index-CK.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/ava.png" type="assets/x-icon" />
-    <title>Đặt khám với bác sĩ qua Health Care - online service</title>
+    <title>Đặt khám chuyên khoa qua Health Care - online service</title>
     <!-- CSS Files -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
-    <link rel="stylesheet" href="./css/style-DR.css">
+    <link rel="stylesheet" href="./css/style-CK.css">
 </head>
 
 <body>
@@ -232,7 +232,7 @@
 
     <!-- JavaScript Files -->
 
-    <script src="./js/app-DR.js"></script>
+    <script src="./js/app-CK.js"></script>
 </body>
 
 </html>    
