--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- Header -->
-    
+
     <header>
         <nav class="info">
             <ul>
@@ -54,7 +54,7 @@
 
     <main>
         <section class="showcase-area">
-            <img src="./assets/bg-banner-01.png" alt="bg-banner">
+            <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/bg-banner-01.png" alt="bg-banner">
             <div class="container">
                 <div class="showcase-info">
                     <h2 class="sub-heading">Nền Tảng Y Tế</h2>
