--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
                 </li>
             </ul>
         </nav>
-        <nav class="container">
+        <nav class="nav-bar">
+            
+            <div class="container">
             <a href="#" class="logo">
                 <img src="./assets/ava_v2.png" title="Booking Health Care Web"/>
             </a>
@@ -47,6 +49,8 @@
                     </li>
                 </ul>
             </div>
+            <div id="menu-btn"><i class="uil uil-bars"></i></div>
+            </div>
         </nav>
     </header>
 
@@ -63,11 +67,26 @@
                 <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/ava-text2.png" class="showcase-logo">
                 <div class="service">
                     <ul>
-                        <li><a href="#" class="service-btn">Khám chuyên khoa</a></li>
-                        <li><a href="#" class="service-btn">Hồ sơ sức khỏe</a></li>
-                        <li><a href="#" class="service-btn">Hỏi đáp bác sĩ</a></li>
-                        <li><a href="#" class="service-btn">Dịch vụ khẩn cấp</a></li>
-                        <li><a href="#" class="service-btn">Sản phẩm y tế</a></li>
+                        <li><a href="#" class="service-btn">
+                            <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/kham-ck-01.png" class="icon">
+                            <p class="text">Khám chuyên khoa</p>
+                        </a></li>
+                        <li><a href="#" class="service-btn">
+                            <!-- <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/ho-so-kham-benh-01.png" class="icon"> -->
+                            <p class="text">Hồ sơ cá nhân</p>
+                        </a></li>
+                        <li><a href="#" class="service-btn">
+                            <!-- <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/hoi-dap-bs-01.png" class="icon"> -->
+                            <p class="text">Hỏi đáp bác sĩ</p>
+                        </a></li>
+                        <li><a href="#" class="service-btn">
+                            <!-- <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/dv-khan-cap-01.png" class="icon"> -->
+                            <p class="text">Dịch vụ khẩn cấp</p>
+                        </a></li>
+                        <li><a href="#" class="service-btn">
+                            <!-- <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/sp-y-te-01.png" class="icon"> -->
+                            <p class="text">Sản phẩm y tế</p>
+                        </a></li>
                     </ul>
                 </div>
             </div>
