--- a/test.html
+++ b/test.html
@@ -6,17 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
+    <link rel="stylesheet" href="./css/test.css">
     
   </head>
   <body>
-<a href="#" onclick="show()">show</a>
+    <main>
+      <div class="layer"></div>
+    <label for="date">Ngày:</label>
+<input type="date" id="date">
+<br>
+<label for="time">Giờ:</label>
+<select id="time">
+  <option value="" disabled selected>Chọn giờ</option>
+  <option value="09:00">09:00</option>
+  <option value="13:00">13:00</option>
+  <option value="18:00">18:00</option>
+</select>
+<br>
 <div id="ticketInfo" style="display: none;">
   <h2>Thông tin vé</h2>
   <p><i class="uil uil-check-circle"></i></p>
   <p id="selectedDate"></p>
   <p id="selectedTime"></p>
 </div>
-
+<div class="layer"></div>
+<button id="blur" onclick="blur()">blur</button>
+</main>
   </body>
   <script src="./js/test.js"></script>
 
