--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <main>
         <section class="showcase-area">
-            <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/bg-banner-01.png" alt="bg-banner">
+            <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/bg-banner-01.png" class="bg-banner">
             <div class="container">
                 <div class="showcase-info">
                     <h2 class="sub-heading">Nền Tảng Y Tế</h2>
@@ -68,7 +68,9 @@
                 <div class="service">
                     <ul>
                         <li><a href="#" class="service-btn">
-                            <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/kham-ck-01.png" class="icon">
+                            <div class="icon">
+                                <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/kham-ck-01.png">
+                            </div>
                             <p class="text">Khám chuyên khoa</p>
                         </a></li>
                         <li><a href="#" class="service-btn">
