--- a/index.html
+++ b/index.html
@@ -34,20 +34,10 @@
                 <img src="./assets/ava_v2.png" title="Booking Health Care Web"/>
             </a>
             <div class="links">
-                <ul>
-                    <li>
-                        <a href="#" class="nav-link">Đặt khám</a>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link">Hồ sơ sức khỏe</a>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link">Hỏi đáp bác sĩ</a>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link">Dịch vụ khẩn cấp</a>
-                    </li>
-                </ul>
+                    <a href="#" class="nav-link">Đặt khám</a>
+                    <a href="#" class="nav-link">Hồ sơ cá nhân</a>
+                    <a href="#" class="nav-link">Hỏi đáp bác sĩ</a>
+                    <a href="#" class="nav-link">Dịch vụ khẩn cấp</a>
             </div>
             <div id="menu-btn"><i class="uil uil-bars"></i></div>
             </div>
@@ -63,36 +53,45 @@
                 <div class="showcase-info">
                     <h2 class="sub-heading">Nền Tảng Y Tế</h2>
                     <h1 class="heading">CHĂM SÓC SỨC KHỎE TOÀN DIỆN</h1>
+                    <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/ava-text2.png" class="showcase-logo">
                 </div>
-                <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/ava-text2.png" class="showcase-logo">
                 <div class="service">
                     <ul>
                         <li><a href="#" class="service-btn">
                             <div class="icon">
                                 <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/kham-ck-01.png">
                             </div>
-                            <p class="text">Khám chuyên khoa</p>
+                            <p class="text">Khám <br>chuyên khoa</p>
                         </a></li>
                         <li><a href="#" class="service-btn">
-                            <!-- <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/ho-so-kham-benh-01.png" class="icon"> -->
-                            <p class="text">Hồ sơ cá nhân</p>
+                            <div class="icon">
+                            <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/ho-so-kham-benh-01.png" class="icon">
+                            </div>
+                            <p class="text">Hồ sơ <br>cá nhân</p>
                         </a></li>
                         <li><a href="#" class="service-btn">
-                            <!-- <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/hoi-dap-bs-01.png" class="icon"> -->
-                            <p class="text">Hỏi đáp bác sĩ</p>
+                            <div class="icon">
+                            <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/hoi-dap-bs-01.png" class="icon">
+                            </div>
+                            <p class="text">Hỏi đáp <br>bác sĩ</p>
                         </a></li>
                         <li><a href="#" class="service-btn">
-                            <!-- <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/dv-khan-cap-01.png" class="icon"> -->
-                            <p class="text">Dịch vụ khẩn cấp</p>
+                            <div class="icon">
+                            <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/dv-khan-cap-01.png" class="icon">                            </div>
+                            <p class="text">Dịch vụ <br>khẩn cấp</p>
                         </a></li>
                         <li><a href="#" class="service-btn">
-                            <!-- <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/sp-y-te-01.png" class="icon"> -->
-                            <p class="text">Sản phẩm y tế</p>
+                            <div class="icon">
+                            <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/sp-y-te-01.png" class="icon">
+                            </div>
+                            <p class="text">Sản phẩm <br>y tế</p>
                         </a></li>
                     </ul>
                 </div>
             </div>
         </section>
+
+
         <section class="bac-si-noi-bat"></section>
             <div class="doctor-card"></div>
             <div class="pagination"></div>
