--- a/index-CK.html
+++ b/index-CK.html
@@ -69,6 +69,7 @@
                     <div class="service-list">
                         <a class="service-card">
                             <div class="service-image">
+                                <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/dich-vu.jpg" alt="">
                             </div>
                             <div class="service-info">
                                 <h3><p class="name">Gói khám tổng quát răng, hàm</p></h3>
@@ -80,6 +81,7 @@
                         
                         <a class="service-card">
                             <div class="service-image">
+                                <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/dich-vu.jpg" alt="">
                             </div>
                             <div class="service-info">
                                 <h3><p class="name">Gói khám Nội soi dạ dày, thực quản, tá tràng</p></h3>
@@ -92,6 +94,7 @@
 
                         <a class="service-card">
                             <div class="service-image">
+                                <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/dich-vu.jpg" alt="">
                             </div>
                             <div class="service-info">
                                 <h3><p class="name">Gói khám và siêu âm 4D tuyến giáp</p></h3>
@@ -103,6 +106,7 @@
 
                         <a class="service-card">
                             <div class="service-image">
+                                <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/dich-vu.jpg" alt="">
                             </div>
                             <div class="service-info">
                                 <h3><p class="name">Gói khám và siêu âm thai</p></h3>
