--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="hotline"><i class="uil uil-phone"></i> Hotline đặt khám : </div>
                 <div class="profile-tab">
                     <span class="username">Đỗ Thùy Dương</span>
-                    <div class="user-ava">
+                    <div class="user-ava" id="user-ava">
                         <img src="https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/ava-users.png">
                         <i class="uil uil-angle-down"></i>
                     </div>
@@ -44,16 +44,22 @@
                     <a href="#" class="nav-link">Hồ sơ cá nhân</a>
                     <a href="#" class="nav-link">Hỏi đáp bác sĩ</a>
                     <a href="#" class="nav-link">Sản phẩm y tế</a>
+                    <!-- <div class="menu-booking-opt">
+                        <a href="#" class="booking-opt">Bác sĩ</a>
+                        <a href="#" class="booking-opt">Chuyên khoa</a>
+                    </div> -->
                 </div>
                 <div id="menu-btn"><i class="uil uil-bars"></i></div>
+
                 <div class="menu-profile-tab">
-                    <a href="#" class="menu-opt"><i class="uil uil-user"></i>Hồ sơ cá nhân</a>
-                    <a href="#" class="menu-opt"><i class="uil uil-schedule"></i>Lịch sử đặt khám</a>
-                    <a href="#" class="menu-opt"><i class="uil uil-shopping-cart"></i>Đơn hàng</a>
-                    <a href="#" class="menu-opt"><i class="uil uil-question-circle"></i>Câu hỏi của tôi</a>
-                    <a href="#" class="menu-opt"><i class="uil uil-keyhole-circle"></i>Đổi mật khẩu</a>
-                    <a href="#" class="menu-opt"><i class="uil uil-signout"></i>Đăng xuất</a>
-                    
+                    <a href="#" id="menu-opt"><i class="uil uil-user"></i>Hồ sơ cá nhân</a>
+                    <a href="#" id="menu-opt"><i class="uil uil-schedule"></i>Lịch sử đặt khám</a>
+                    <a href="#" id="menu-opt"><i class="uil uil-shopping-cart"></i>Đơn hàng</a>
+                    <a href="#" id="menu-opt"><i class="uil uil-question-circle"></i>Câu hỏi của tôi</a>
+                    <a href="#" id="menu-opt"><i class="uil uil-keyhole-circle"></i>Đổi mật khẩu</a>
+                    <a href="#" id="menu-opt"><i class="uil uil-signout"></i>Đăng xuất</a>
+                </div>
+
             </div>
         </nav>
     </header>
