--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
                     <img src="./assets/ava_v2.png" title="Booking Health Care Web"/>
                 </a>
                 <div class="links">
-                    <a href="#" class="nav-link">Đặt khám <i class="uil uil-angle-down"></i></a>
+                    <a class="nav-link" id="nav-booking">Đặt khám <i class="uil uil-angle-down"></i></a>
                     <a href="#" class="nav-link">Hồ sơ cá nhân</a>
                     <a href="#" class="nav-link">Hỏi đáp bác sĩ</a>
                     <a href="#" class="nav-link">Sản phẩm y tế</a>
-                    <!-- <div class="menu-booking-opt">
+                    <div class="menu-booking-opt">
                         <a href="#" class="booking-opt">Bác sĩ</a>
-                        <a href="#" class="booking-opt">Chuyên khoa</a>
-                    </div> -->
+                        <a href="#" class="booking-opt">Gói khám</a>
+                    </div>
                 </div>
                 <div id="menu-btn"><i class="uil uil-bars"></i></div>
 
